--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,6 +4,9 @@
     height: 50px;
     position: sticky;
     top: 0;
+    .linkCont {
+        text-decoration: none;
+    }
     .companyName {
         padding: 15px 0 0 20px;
         color: #fff2e1;
