--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -4,4 +4,16 @@
         flex-wrap: wrap;
         // margin: 0 8.2%;
     }
+    .loadMore {
+        margin: 0 530px 10px 530px;
+        background-color: #74ccf3;
+        border: none;
+        color: white;
+        padding: 11px 24px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        font-size: 16px;
+    }
 }
